--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<div id="map" style="width: 100%; height: 500px;"></div>
 
     <h1>All Campgrounds</h1>
     <a class="btn btn-info" href="/campgrounds/new">Add new Campground</a>
@@ -29,5 +30,13 @@
         
         <% } %>
     </ul>
+
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+        const campgrounds = {features: <%-JSON.stringify(campgrounds)%>};
+     </script>
+
+
+<script src="/javascripts/clusterMap.js"></script>
 
     
