--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -21,7 +21,7 @@
                     </div>
                 </div>
 
-                <input type="file" name="image" id="" multiple>
+                <input type="file" name="image" id="" required multiple >
 
                 <!-- <div class="mb-3">
                     <label class = "form-label" for="image">ImageURL </label>
