--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -54,6 +54,8 @@
    </div>
 
    <div class="col-6">
+      <div id="map" style="width: 550px; height: 300px"></div>
+      <br>
     <% if (currentUser){ %>
     <h2>Leave a review</h2>
     <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
@@ -104,4 +106,11 @@
     <% } %>
  </div>
 </div>
+
+<script>
+   const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+   const campground = <%-JSON.stringify(campground)%>;
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
 
